--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <h2>Compound Intrest</h2>
         Compount Intrest 
         <input type="text" onclick="principal()" placeholder="Click here to add details:">
+        <p id="principal">principal = </p>
+        <p id="time">time = </p>
+        <p id="rate">rate = </p>
     </section>
 </body>
 
